# sniff_sqlserver

./: README.md  pyproject.toml
sniff_sqlserver/: __init__.py  __main__.py
sniff_sqlserver/tds/: __init__.py  packet.py
